src/objects/Invoice__c.object
<CustomObject>
    <description>An Invoice to submit expenses related to a DUG for reimbursement.</description>
    <fields>
        <fullName>BillTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact to bill this Invoice to</description>
        <inlineHelpText>Contact to bill this Invoice to</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date of Invoice</description>
        <inlineHelpText>Date of Invoice</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <defaultValue>TEXT(MONTH(TODAY()))
+
TEXT(DAY(TODAY()))
+
TEXT(YEAR(TODAY()))</defaultValue>
        <label>Invoice #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>InvoiceLineItem__c.Amount__c</summarizedField>
        <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Total_Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Inv-{0000}</displayFormat>
        <label>Invoice AutoNum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>